--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "px-inbox",
     "author": "General Electric",
-    "description": "A Px component",
+    "description": "A Px component for list-detail view",
     "version": "0.0.1",
     "private": true,
     "extName" : null,
