--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "px-inbox",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "main": [
     "px-inbox.html"
   ],
@@ -22,14 +22,14 @@
   ],
   "dependencies": {
     "polymer": "^1.6.0",
-    "px-theme": "~0.8.0",
+    "px-theme": "~1.1.2",
     "px-meta-lists-design": "^0.3.4",
-    "px-forms-design": "#~0.3.15",
+    "px-forms-design": "^0.3.15",
     "px-dropdown": "^0.11.2",
     "moment": "^2.15.1"
   },
   "devDependencies": {
-    "px-tables-design": "#~0.3.12",
+    "px-tables-design": "~0.3.12",
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.2.3",
     "px-polymer-font-awesome": "^0.1.8",
     "px-tabs": "~0.4.0",
