--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
     "name": "px-inbox",
     "author": "General Electric",
     "description": "A Px component for list-detail view",
-    "version": "0.2.6",
+    "version": "0.2.7",
     "private": true,
     "extName" : null,
     "repository" :
     {
         "type": "git",
-        "url": "https://github.com/PredixDev/change-this-in-package.json-please.git"
+        "url": "https://github.com/PredixDev/px-inbox.git"
     },
     "homepage": "http://predix.io/",
     "devDependencies": {
