--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "px-inbox",
-    "version": "0.2.10",
+    "version": "0.2.11",
     "main": [
         "px-inbox.html"
     ],
@@ -25,7 +25,7 @@
         "px-theme": "~1.1.2",
         "px-meta-lists-design": "^0.3.4",
         "px-forms-design": "^0.3.15",
-        "px-dropdown": "^0.12.2",
+        "px-dropdown": "~2.0.0",
         "moment": "^2.15.1"
     },
     "devDependencies": {
