--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "px-inbox",
-  "version": "0.2.22",
+  "version": "0.2.23",
   "main": [
     "px-inbox.html"
   ],
@@ -15,32 +15,25 @@
     "OSS_Notice.pdf",
     "scripts",
     ".github",
-    "px-inbox.png",
-    "LICENSE.md",
-    "CONTRIBUTING.md",
-    "HISTORY.md"
+    "px-demo.png",
+    "*.md",
+    ".jshintrc",
+    ".editorconfig",
+    "monogram-wdmk.png",
+    "*.png",
+    "wct.conf.json"
   ],
   "dependencies": {
     "polymer": "^1.6.0",
     "px-theme": "^2.0.1",
     "px-meta-lists-design": "^0.4.0",
     "px-forms-design": "^1.1.2",
-    "px-dropdown": "~2.1.1",
-    "moment": "^2.15.1"
+    "moment": "^2.15.1",
+    "px-dropdown": "^2.2.9"
   },
   "devDependencies": {
-    "px-tables-design": "^1.1.3",
-    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.2.3",
-    "px-polymer-font-awesome": "^1.1.0",
-    "px-tabs": "^0.6.0",
-    "px-api-viewer": "^0.1.0",
-    "px-demo-snippet": "^0.6.9",
-    "px-toggle-design": "^1.1.2",
-    "px-headings-design": "^0.3.2",
-    "px-actionable-text-icons-design": "^1.1.3",
-    "px-code-design": "^1.1.2",
-    "px-list-bare-design": "^0.3.1",
     "px-starter-kit-design": "^0.7.1",
-    "px-input-group-design": "^1.1.1"
+    "px-demo": "^1.4.5",
+    "px-input-group-design": "^1.1.3"
   }
 }
