--- a/bower.json
+++ b/bower.json
@@ -42,5 +42,8 @@
     "px-flexbox-design": "^1.0.0",
     "px-shadows-design": "^1.0.0",
     "px-actionable-design": "^2.0.0"
+  },
+  "resolutions": {
+    "webcomponentsjs": "^0.7.24"
   }
 }
