--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "px-inbox",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "main": [
     "px-inbox.html"
   ],
@@ -41,7 +41,8 @@
     "px-box-sizing-design": "^1.0.0",
     "px-flexbox-design": "^1.0.0",
     "px-shadows-design": "^1.0.0",
-    "px-actionable-design": "^2.0.0"
+    "px-actionable-design": "^2.0.0",
+    "px-spacing-design": "^1.0.0"
   },
   "resolutions": {
     "webcomponentsjs": "^0.7.24"
