--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "name": "px-inbox",
     "author": "General Electric",
     "description": "A Px component for list-detail view",
-    "version": "2.0.0",
-    "private": true,
+    "version": "2.0.1",
+    "private": false,
     "extName": null,
     "repository": {
         "type": "git",
