--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "px-inbox",
-  "version": "2.1.1",
+  "version": "2.2.0",
   "main": [
     "px-inbox.html"
   ],
@@ -30,7 +30,8 @@
     "px-dropdown": "^4.0.0",
     "px-icon-set": "^2.0.0",
     "px-alert-label": "^2.0.0",
-    "iron-resizable-behavior": "^2.0.1"
+    "iron-resizable-behavior": "^2.0.1",
+    "app-localize-behavior": "^2.0.0"
   },
   "devDependencies": {
     "px-theme": "^3.0.0",
