--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ addons:
     packages:
     - google-chrome-stable
 before_script:
-- yarn add polymer-cli
+- yarn add polymer-cli -g
 - polymer install --variants
 script:
 - xvfb-run wct --skip-plugin sauce
